[+ added, - removed, * changed ]
   * (27/Feb/2012) Added query function to get the Network object from a loaded Protocol
   * (02/Feb/2012) Added --rpath option in mrnapp-config script 
   * (30/Nov/2011) Added some files (scripts / tests) to EXTRA_DIST
   * (30/Nov/2011) Fixed bug announcing the registered streams to the back-ends
   * (30/Nov/2011) Fixed bug in the topology generation in the mrnrun script
   * (22/Nov/2011) Added Init routines both in the FE and BE API's that read parameters from environment variables
   * (22/Nov/2011) Improved script 'mrnrun'
   + (14/Nov/2011) New scripts mrnrun (launch apps) and sourceme.sh (set environment) 
   + (08/Nov/2011) New script mrnapp-config to query configure options (cflags, libs, etc.)
   + (25/Oct/2011) Initial commit of the libMRNetApp package.