@@ -5,6 +5,6 @@ export MRNETAPP_HOME=@sub_MRNAPP_HOME@
 export MRNET_HOME=@sub_MRNET_HOME@
 export MRNET_COMM_PATH=${MRNET_HOME}/bin/mrnet_commnode
 export MRNET_TOPGEN=${MRNET_HOME}/bin/mrnet_topgen
-export XPLAT_RESOLVE_HOSTS=0
+export XPLAT_RESOLVE_HOSTS=1
 export LD_LIBRARY_PATH=${MRNETAPP_HOME}/lib:${MRNET_HOME}/lib:${LD_LIBRARY_PATH}
 
